# 3D-object-detection-and-recognition-to-rgb-image-viewer

./: CMakeLists.txt  README.md  package.xml
include/kinect_viewer/: kinect_viewer.hpp
launch/: kinect-viewer.launch
src/: kinect_viewer.cpp  kinect_viewer_node.cpp
