CMAKE_MINIMUM_REQUIRED  (VERSION 2.8.3)
PROJECT(kinect_viewer)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(catkin REQUIRED COMPONENTS roscpp sensor_msgs cv_bridge message_generation)
FIND_PACKAGE(OpenCV REQUIRED)

CATKIN_PACKAGE(INCLUDE_DIRS include CATKIN_DEPENDS roscpp sensor_msgs cv_bridge message_runtime) #LIBRARIES #DEPENDS 

INCLUDE_DIRECTORIES(include ${catkin_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBS})
